feat: added get directorybyid and fix folders traversal
