# src/storageExplorer/routes/storageExplorer.router.ts
@@ -7,6 +7,7 @@ const storageExplorerRouterFactory: FactoryFunction<Router> = (dependencyContain
   const controller = dependencyContainer.resolve(StorageExplorerController);
 
   router.get('/directory', controller.getDirectory);
+  router.get('/directorybyid', controller.getdirectoryById);
   router.get('/file', controller.getFile);
   router.get('/filebyid', controller.getFileById);
   router.get('/decryptid', controller.decryptId);
